[tool.poetry]
name = "python_devenv_flake"
version = "0.1.0"
description = ""
authors = ["Alex Melville"]
# readme = "README.md"
# license = "BSD"
packages = [{ include = "python_devenv_flake" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.scripts]
main = "python_devenv_flake.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
