[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[project]
name = "python_devenv_flake"
version = "0.1.0"
description = "My awesome Python project!"
authors = [{ name = "Alex Melville" }]

requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
